[workspace]
resolver = "3"
members = [
    "crates/san",
    "crates/san-driver",
    "crates/cargo-san",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ericsssan/san"
authors = ["Eric San"]

[workspace.dependencies]
san = { path = "crates/san" }
